# vcpkg

./: .gitignore
poco/: CMakeLists.txt
poco/src/: main.cpp  process.cpp  process.hpp
poco/tests/: tests.cpp
